--- a/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -248,6 +248,9 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,
 K2Node_CustomEvent=K2Node_CustomEvent.Inputs.InputArgument1,
+BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
+FirstPersonCharacter_C=FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,
+CapsuleComponent=
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game
@@ -328,22 +331,29 @@ LastLevel=/Game/Maps/FirstPersonExampleMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
+OpenAssetsAtExit=/Game/Animations/PlayerAnim.PlayerAnim
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/FirstPersonExampleMap
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem2=/Game/Geometry/Meshes/1M_Cube_DM
-MRUItem3=/Game/Geometry/Meshes/1M_Cube
-MRUItem4=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem5=/Game/StarterContent/Maps/StarterMap
-MRUItem6=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem7=/Game/StarterContent/Maps/Minimal_Default
-MRUItem8=/Game/Maps/StarterMap
-MRUItem9=/Game/Cart_Mat
-MRUItem10=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem11=/Game/FirstPersonBP/Blueprints/PickableObject
-MRUItem12=/Game/FirstPerson/Animations/FirstPersonFire_Montage
-MRUItem13=/Game/FirstPerson/Character/Mesh/SK_Mannequin_Arms
+MRUItem0=/Game/Animations/Male_Action_Pose
+MRUItem1=/Game/Animations/Walk-Run_Blend
+MRUItem2=/Game/Animations/Breathing_Idle
+MRUItem3=/Game/Animations/Walking__1_
+MRUItem4=/Game/Breathing_Idle
+MRUItem5=/Game/Walk-Run_Blend
+MRUItem6=/Game/Running
+MRUItem7=/Game/Animations/Walking_Skeleton
+MRUItem8=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem9=/Game/Animations/PlayerAnim
+MRUItem10=/Game/Animations/Walking
+MRUItem11=/Game/Maps/FirstPersonExampleMap
+MRUItem12=/Game/Geometry/Meshes/1M_Cube_DM
+MRUItem13=/Game/Geometry/Meshes/1M_Cube
+MRUItem14=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem15=/Game/StarterContent/Maps/StarterMap
+MRUItem16=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem17=/Game/StarterContent/Maps/Minimal_Default
+MRUItem18=/Game/Maps/StarterMap
+MRUItem19=/Game/Cart_Mat
 
 [DetailCategories]
 FirstPersonCharacter_C.Default=True
@@ -427,7 +437,7 @@ CameraComponent.Variable=True
 CameraComponent.TransformCommon=True
 CameraComponent.Sockets=True
 CameraComponent.CameraSettings=True
-CameraComponent.CameraOptions=True
+CameraComponent.CameraOptions=False
 CameraComponent.Camera=True
 CameraComponent.PostProcess=True
 CameraComponent.ComponentTick=True
@@ -901,6 +911,101 @@ DestructibleActor.Cooking=True
 DestructibleActor.Replication=True
 DestructibleActor.Actor=True
 DestructibleChunkParamsProxy.Chunks=True
+FbxImportUI.Mesh=True
+FbxImportUI.Animation=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.Material=True
+FbxImportUI.FbxFileInformation=True
+FirstPersonCharacter_C.Materials=True
+PlayerAnim_C.RootMotion=True
+PlayerAnim_C.Notifies=True
+AnimGraphNode_SequencePlayer.Settings=True
+AnimGraphNode_SequencePlayer.Relevancy=True
+PersonaPreviewSceneDescription.Animation=True
+PersonaPreviewSceneDescription.Mesh=True
+PersonaPreviewSceneDescription.Additional Meshes=True
+AssetViewerSettings.Settings=True
+PersonaPreviewSceneDescription.Animation Blueprint=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+SkeletalMeshActor.TransformCommon=True
+SkeletalMeshActor.Animation=True
+SkeletalMeshActor.Mesh=True
+SkeletalMeshActor.Materials=True
+SkeletalMeshActor.Clothing=True
+SkeletalMeshActor.Physics=True
+SkeletalMeshActor.Collision=True
+SkeletalMeshActor.MasterPoseComponent=True
+SkeletalMeshActor.Lighting=True
+SkeletalMeshActor.ClothingSimulation=True
+SkeletalMeshActor.Rendering=True
+SkeletalMeshActor.SkinWeights=True
+SkeletalMeshActor.Navigation=True
+SkeletalMeshActor.VirtualTexture=True
+SkeletalMeshActor.Tags=True
+SkeletalMeshActor.Activation=True
+SkeletalMeshActor.Cooking=True
+SkeletalMeshActor.Replication=True
+SkeletalMeshActor.Input=True
+SkeletalMeshActor.Actor=True
+AnimGraphNode_LayeredBoneBlend.Config=True
+AnimGraphNode_LayeredBoneBlend.Runtime=True
+AnimGraphNode_LayeredBoneBlend.Performance=True
+SceneComponent.TransformCommon=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Variable=True
+SceneComponent.Cooking=True
+AnimGraphNode_StateMachine.GraphNodeDetail=True
+AnimGraphNode_StateMachine.Settings=True
+AnimStateNode.GraphNodeDetail=True
+AnimStateNode.Animation State=True
+BlendSpace1D.InputInterpolation=True
+BlendSpace1D.Axis Settings=True
+BlendSpace1D.AdditiveSettings=True
+BlendSpace1D.Animation=True
+BlendSpace1D.SampleInterpolation=True
+BlendSpace1D.AnimationNotifies=True
+BlendSpace1D.MetaData=True
+BlendSpace1D.Thumbnail=True
+AnimSequence.Animation=True
+AnimSequence.AdditiveSettings=True
+AnimSequence.Compression=True
+AnimSequence.RootMotion=True
+AnimSequence.ImportSettings=True
+AnimSequence.Transform=True
+AnimSequence.Miscellaneous=True
+AnimSequence.File Path=True
+AnimSequence.CustomAttributes=True
+AnimSequence.MetaData=True
+AnimSequence.Thumbnail=True
+BlendSpace1D.BlendSamples=True
+AnimStateTransitionNode.Transition=True
+AnimStateTransitionNode.BlendSettings=True
+AnimStateTransitionNode.Events=True
+AnimStateTransitionNode.Notifications=True
+AnimStateNode.Events=False
+FirstPersonCharacter_C.SkeletalMesh=False
+FirstPersonCharacter_C.Optimization=False
+FirstPersonCharacter_C.MaterialParameters=False
+FirstPersonCharacter_C.HLOD=False
+FirstPersonCharacter_C.Mobile=False
+FirstPersonCharacter_C.AssetUserData=False
+PlayerAnim_C.Default=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -911,13 +1016,21 @@ MeshComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
-Object=
+Object="\"Object.SkeletalMeshes\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 DestructibleMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects.FractureEffects[1]\" \"Object.SkeletalMesh.Materials.Materials[1]\" "
 SkeletalMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects.FractureEffects[1]\" \"Object.SkeletalMesh.Materials.Materials[1]\" "
 StreamableRenderAsset="\"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects.FractureEffects[1]\" \"Object.SkeletalMesh.Materials.Materials[1]\" "
+AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+AnimGraphNode_Base=
+K2Node=
+EdGraphNode=
+FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -935,12 +1048,18 @@ InputSettings=True
 /Game/Maps/FirstPersonExampleMap.FirstPersonExampleMap:PersistentLevel.FirstPersonExampleMap=1
 /Game/Geometry/Meshes/1M_Cube.1M_Cube=1
 /Game/Geometry/Meshes/1M_Cube_DM.1M_Cube_DM=1
+/Game/Animations/Walking_Skeleton.Walking_Skeleton=1
+/Game/Walk-Run_Blend.Walk-Run_Blend=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
 Contexts=(Name="AnimationEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletalMeshEditor",Commands=)
 Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationBlueprintEditor",Commands=)
+Contexts=(Name="SkeletonEditor",Commands=)
+Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -979,12 +1098,14 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
+RecentlyPlaced=/Game/Animations/Walking_PhysicsAsset.Walking_PhysicsAsset;
+RecentlyPlaced=/Game/Animations/Walking.Walking;
 RecentlyPlaced=/Game/Geometry/Meshes/1M_Cube_DM.1M_Cube_DM;
 RecentlyPlaced=/Game/Cart_Mat.Cart_Mat;
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/PickableObject.PickableObject;
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=FBXImport
 
 [MaterialEditor]
 PrimType=1
@@ -1071,4 +1192,117 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [DetailCategoriesAdvanced]
 DestructibleMesh.Damage=True
+
+[FBX_Import_UI_Option_FbxImportUI]
+bOverrideFullName=True
+bCreatePhysicsAsset=True
+bAutoComputeLodDistances=True
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+MinimumLodNumber=0
+LodNumber=0
+bImportAnimations=True
+bImportMaterials=True
+bImportTextures=True
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bRemoveDegenerates=True
+bBuildAdjacencyBuffer=True
+bBuildReversedIndexBuffer=True
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+VertexColorImportOption=Replace
+VertexOverrideColor=(B=0,G=0,R=0,A=0)
+bUpdateSkeletonReferencePose=False
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+MorphThresholdPosition=0.015000
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+bImportMeshesInBoneHierarchy=True
+AnimationLength=FBXALIT_ExportedTime
+FrameImportRange=(Min=0,Max=0)
+bUseDefaultSampleRate=False
+CustomSampleRate=0
+bImportCustomAttribute=True
+bDeleteExistingCustomAttributeCurves=False
+bDeleteExistingNonCurveCustomAttributes=False
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=-90.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+BaseOpacityTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[/Script/UnrealEd.AnimationBlueprintEditorOptions]
+bHideUnrelatedNodes=False
 
