--- a/ChristmasJam21Team8/Saved/Config/Windows/SourceControlSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/SourceControlSettings.ini
@@ -1,3 +1,6 @@
 [SourceControl.SourceControlSettings]
 Provider=Git
 
+[GitSourceControl.GitSourceControlSettings]
+BinaryPath=C:/Users/andir/AppData/Local/GitHubDesktop/app-2.9.4/resources/app/git/cmd/git.exe
+
