Update Toy Pick Up

--- a/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -128,8 +128,8 @@ GridEnabled=False
 
 [MRU]
 MRUItem0=/Game/Maps/FirstPersonExampleMap
-MRUItem1=/Game/Maps/AntoineScene
-MRUItem2=/Game/Maps/Maxence_Scene
+MRUItem1=/Game/Maps/Maxence_Scene
+MRUItem2=/Game/Maps/AntoineScene
 MRUItem3=/Game/Maps/RomainScene
 MRUItem4=/Game/Maps/AntoineLVL
 MRUItem5=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
@@ -263,6 +263,8 @@ etagere_Blueprint_C=
 Void_Item_Blueprint_C=Void_Item_Blueprint_C.Physics.ConstraintsGroup,Void_Item_Blueprint_C.Rendering.RayTracing,Void_Item_Blueprint_C.Rendering.LOD,
 Non_Pickable_Item_Blueprint_C=Non_Pickable_Item_Blueprint_C.Physics.ConstraintsGroup,Non_Pickable_Item_Blueprint_C.Rendering.RayTracing,Non_Pickable_Item_Blueprint_C.Rendering.LOD,
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
+SceneComponent=
+PickableObject_2_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Shelf
@@ -341,24 +343,22 @@ ContentBrowserTab2.CurrentViewType=1
 LastLevel=/Game/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Shelf/Pickable_Item_Blueprint.Pickable_Item_Blueprint
-OpenAssetsAtExit=/Game/Shelf/etagere_Blueprint.etagere_Blueprint
+CleanShutdown=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Shelf/Void_Item_Blueprint
-MRUItem1=/Game/Shelf/Non_Pickable_Item_Blueprint
-MRUItem2=/Game/Shelf/Pickable_Item_Blueprint
-MRUItem3=/Game/Shelf/05_-_Default
-MRUItem4=/Game/Shelf/etagere_Blueprint
-MRUItem5=/Game/Shelf/Shelf_Blueprint
-MRUItem6=/Game/Maps/FirstPersonExampleMap
-MRUItem7=/Game/StarterContent/Textures/T_Lamp_M
-MRUItem8=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem9=/Game/Animations/PlayerAnim
-MRUItem10=/Game/Shelf/Item_Blueprint
-MRUItem11=/Game/Maps/AntoineScene
-MRUItem12=/Game/Maps/Maxence_Scene
+MRUItem0=/Game/Maps/FirstPersonExampleMap
+MRUItem1=/Game/Maps/Maxence_Scene
+MRUItem2=/Game/Shelf/Void_Item_Blueprint
+MRUItem3=/Game/Shelf/Non_Pickable_Item_Blueprint
+MRUItem4=/Game/Shelf/Pickable_Item_Blueprint
+MRUItem5=/Game/Shelf/05_-_Default
+MRUItem6=/Game/Shelf/etagere_Blueprint
+MRUItem7=/Game/Shelf/Shelf_Blueprint
+MRUItem8=/Game/StarterContent/Textures/T_Lamp_M
+MRUItem9=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem10=/Game/Animations/PlayerAnim
+MRUItem11=/Game/Shelf/Item_Blueprint
+MRUItem12=/Game/Maps/AntoineScene
 MRUItem13=/Game/Maps/RomainScene
 MRUItem14=/Game/Maps/AntoineLVL
 MRUItem15=/Game/Animations/Male_Action_Pose
@@ -1200,6 +1200,13 @@ etagere_Blueprint_C.Default=True
 StaticMeshComponent.HLOD=True
 Non_Pickable_Item_Blueprint_C.HLOD=True
 Void_Item_Blueprint_C.HLOD=True
+PickableObject_2_C.TransformCommon=True
+PickableObject_2_C.Default=True
+PickableObject_2_C.Collision=True
+PickableObject_2_C.Rendering=True
+PickableObject_2_C.Replication=True
+PickableObject_2_C.Input=True
+PickableObject_2_C.Actor=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1208,9 +1215,9 @@ InstalledPlugins=XRVisualization
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
-Object="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
+SceneComponent=
+ActorComponent=
+Object=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 Brush=
@@ -1226,7 +1233,7 @@ FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" 
 Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 Shelf_Blueprint_C="\"Object.Item\" "
-StaticMeshActor="\"Object.ItemPosition\" "
+StaticMeshActor=
 etagere_Blueprint_C="\"Object.ItemPosition\" "
 Void_Item_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 Non_Pickable_Item_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
@@ -1303,6 +1310,7 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
+RecentlyPlaced=/Game/FirstPersonBP/Blueprints/PickableObject_2.PickableObject_2;
 RecentlyPlaced=/Game/Shelf/Pickable_Item_Blueprint.Pickable_Item_Blueprint;
 RecentlyPlaced=/Game/Shelf/etagere.etagere;
 RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
