--- a/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -253,21 +253,27 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,
 K2Node_CustomEvent=K2Node_CustomEvent.Inputs.InputArgument1,
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
-FirstPersonCharacter_C=FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,
+FirstPersonCharacter_C=
 CapsuleComponent=
-PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 Shelf_Blueprint_C=
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,
-K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,
-etagere_Blueprint_C=
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
+etagere_Blueprint_C=etagere_Blueprint_C.Physics.ConstraintsGroup,
 Void_Item_Blueprint_C=Void_Item_Blueprint_C.Physics.ConstraintsGroup,Void_Item_Blueprint_C.Rendering.RayTracing,Void_Item_Blueprint_C.Rendering.LOD,
 Non_Pickable_Item_Blueprint_C=Non_Pickable_Item_Blueprint_C.Physics.ConstraintsGroup,Non_Pickable_Item_Blueprint_C.Rendering.RayTracing,Non_Pickable_Item_Blueprint_C.Rendering.LOD,
-StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 SceneComponent=
-PickableObject_2_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
+PickableObject_2_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,Non_Pickable_Item_Blueprint_C.Physics.ConstraintsGroup,Non_Pickable_Item_Blueprint_C.Rendering.RayTracing,Non_Pickable_Item_Blueprint_C.Rendering.LOD,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,
+Character=
+PickableObject_C=
+PhysicsConstraintComponent=PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,
+SoundClass=
+Generic_Item_C=
+EnemyAI_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,Non_Pickable_Item_Blueprint_C.Physics.ConstraintsGroup,Non_Pickable_Item_Blueprint_C.Rendering.RayTracing,Non_Pickable_Item_Blueprint_C.Rendering.LOD,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Shelf
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 SequenceBrowser.ActiveTypeFilters=
@@ -329,7 +335,7 @@ ContentBrowserTab2.ActiveTypeFilters=
 ContentBrowserTab2.EnabledTypeFilters=
 ContentBrowserTab2.ActiveFrontendFilters=
 ContentBrowserTab2.EnabledFrontendFilters=
-ContentBrowserTab2.SelectedPaths=/Game
+ContentBrowserTab2.SelectedPaths=/Game/Shelf
 ContentBrowserTab2.PluginFilters=
 ContentBrowserTab2.Favorites.SelectedPaths=
 ContentBrowserTab2.CollectionsExpanded=True
@@ -340,32 +346,35 @@ ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+LastLevel=/Game/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Shelf/etagere_Blueprint.etagere_Blueprint
+OpenAssetsAtExit=/Game/Shelf/PickableObject_2.PickableObject_2
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/FirstPersonExampleMap
-MRUItem1=/Game/Maps/Maxence_Scene
-MRUItem2=/Game/Shelf/Void_Item_Blueprint
-MRUItem3=/Game/Shelf/Non_Pickable_Item_Blueprint
-MRUItem4=/Game/Shelf/Pickable_Item_Blueprint
-MRUItem5=/Game/Shelf/05_-_Default
-MRUItem6=/Game/Shelf/etagere_Blueprint
-MRUItem7=/Game/Shelf/Shelf_Blueprint
-MRUItem8=/Game/StarterContent/Textures/T_Lamp_M
-MRUItem9=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem10=/Game/Animations/PlayerAnim
-MRUItem11=/Game/Shelf/Item_Blueprint
-MRUItem12=/Game/Maps/AntoineScene
-MRUItem13=/Game/Maps/RomainScene
-MRUItem14=/Game/Maps/AntoineLVL
-MRUItem15=/Game/Animations/Male_Action_Pose
-MRUItem16=/Game/Animations/Walk-Run_Blend
-MRUItem17=/Game/Animations/Breathing_Idle
-MRUItem18=/Game/Animations/Walking__1_
-MRUItem19=/Game/Breathing_Idle
+MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem1=/Game/Shelf/etagere_Blueprint
+MRUItem2=/Game/Shelf/PickableObject_2
+MRUItem3=/Game/Maps/FirstPersonExampleMap
+MRUItem4=/Game/Shelf/Generic_Item
+MRUItem5=/Game/Shelf/Void_Item_Blueprint
+MRUItem6=/Game/Shelf/Non_Pickable_Item_Blueprint
+MRUItem7=/Game/Shelf/etagere
+MRUItem8=/Game/FirstPersonBP/Blueprints/PickableObject_2
+MRUItem9=/Game/Maps/Maxence_Scene
+MRUItem10=/Game/Shelf/Pickable_Item_Blueprint
+MRUItem11=/Game/Shelf/05_-_Default
+MRUItem12=/Game/Shelf/Shelf_Blueprint
+MRUItem13=/Game/StarterContent/Textures/T_Lamp_M
+MRUItem14=/Game/Animations/PlayerAnim
+MRUItem15=/Game/Shelf/Item_Blueprint
+MRUItem16=/Game/Maps/AntoineScene
+MRUItem17=/Game/Maps/RomainScene
+MRUItem18=/Game/Maps/AntoineLVL
+MRUItem19=/Game/Animations/Male_Action_Pose
 
 [DetailCategories]
 FirstPersonCharacter_C.Default=True
@@ -400,7 +409,7 @@ SkeletalMeshComponent.Sockets=True
 SkeletalMeshComponent.Animation=True
 SkeletalMeshComponent.Mesh=True
 SkeletalMeshComponent.Materials=True
-SkeletalMeshComponent.ComponentTick=True
+SkeletalMeshComponent.ComponentTick=False
 SkeletalMeshComponent.Clothing=True
 SkeletalMeshComponent.MasterPoseComponent=True
 SkeletalMeshComponent.Physics=True
@@ -729,7 +738,7 @@ PickableObject_C.Input=True
 PropertyWrapper.Variable=True
 PropertyWrapper.DefaultValueCategory=True
 K2Node_VariableGet.Variable=True
-K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.DefaultValueCategory=False
 K2Node_VariableGet.Events=True
 PickableObject_C.TransformCommon=True
 PickableObject_C.Default=True
@@ -1136,7 +1145,7 @@ Pickable_Item_Blueprint_C.Replication=True
 Pickable_Item_Blueprint_C.Input=True
 Pickable_Item_Blueprint_C.Actor=True
 Void_Item_Blueprint_C.TransformCommon=True
-Void_Item_Blueprint_C.StaticMesh=True
+Void_Item_Blueprint_C.StaticMesh=False
 Void_Item_Blueprint_C.Materials=True
 Void_Item_Blueprint_C.Physics=True
 Void_Item_Blueprint_C.Collision=True
@@ -1207,6 +1216,90 @@ PickableObject_2_C.Rendering=True
 PickableObject_2_C.Replication=True
 PickableObject_2_C.Input=True
 PickableObject_2_C.Actor=True
+EnemyAI_C.TransformCommon=True
+EnemyAI_C.Animation=True
+EnemyAI_C.Mesh=True
+EnemyAI_C.Clothing=True
+EnemyAI_C.Physics=True
+EnemyAI_C.Collision=True
+EnemyAI_C.MasterPoseComponent=True
+EnemyAI_C.Lighting=True
+EnemyAI_C.ClothingSimulation=True
+EnemyAI_C.Rendering=True
+EnemyAI_C.SkinWeights=True
+EnemyAI_C.Navigation=True
+EnemyAI_C.VirtualTexture=True
+EnemyAI_C.Tags=True
+EnemyAI_C.Activation=True
+EnemyAI_C.Cooking=True
+EnemyAI_C.Character Movement (General Settings)=True
+EnemyAI_C.Character Movement: Walking=True
+EnemyAI_C.Character Movement: Jumping / Falling=True
+EnemyAI_C.Character Movement (Networking)=True
+EnemyAI_C.Character Movement: Swimming=True
+EnemyAI_C.Character Movement: Flying=True
+EnemyAI_C.Character Movement: Custom Movement=True
+EnemyAI_C.Character Movement (Rotation Settings)=True
+EnemyAI_C.Character Movement: Physics Interaction=True
+EnemyAI_C.Character Movement=True
+EnemyAI_C.Character Movement: Avoidance=True
+EnemyAI_C.RootMotion=True
+EnemyAI_C.Character Movement: NavMesh Movement=True
+EnemyAI_C.NavMovement=True
+EnemyAI_C.Velocity=True
+EnemyAI_C.PlanarMovement=True
+EnemyAI_C.MovementComponent=True
+EnemyAI_C.Shape=True
+EnemyAI_C.Character=True
+EnemyAI_C.Camera=True
+EnemyAI_C.Pawn=True
+EnemyAI_C.Replication=True
+EnemyAI_C.Input=True
+EnemyAI_C.Actor=True
+EnemyAI_C.Materials=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+SceneComponent.Rendering=True
+PickableObject_2_C.Tick=True
+SceneComponent.Sockets=True
+SceneComponent.Events=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.AtmosphereAndCloud=True
+SkyLight.RayTracing=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Actor=True
+SceneComponent.Physics=True
+PhysicsConstraintComponent.TransformCommon=True
+PhysicsConstraintComponent.Constraint=True
+PhysicsConstraintComponent.Constraint Behavior=True
+PhysicsConstraintComponent.Linear Limits=True
+PhysicsConstraintComponent.Rendering=True
+PhysicsConstraintComponent.Angular Limits=True
+PhysicsConstraintComponent.LinearMotor=True
+PhysicsConstraintComponent.AngularMotor=True
+PhysicsConstraintComponent.Tags=True
+PhysicsConstraintComponent.ComponentReplication=True
+PhysicsConstraintComponent.Variable=True
+PhysicsConstraintComponent.Cooking=True
+Generic_Item_C.Tick=True
+Generic_Item_C.Replication=True
+Generic_Item_C.Rendering=True
+Generic_Item_C.Collision=True
+Generic_Item_C.Actor=True
+Generic_Item_C.Input=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1229,15 +1322,22 @@ AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settin
 AnimGraphNode_Base=
 K2Node=
 EdGraphNode=
-FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Actor.Tags\" "
+Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Actor.Tags\" "
+Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Actor.Tags\" "
 Shelf_Blueprint_C="\"Object.Item\" "
-StaticMeshActor=
-etagere_Blueprint_C="\"Object.ItemPosition\" "
-Void_Item_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
-Non_Pickable_Item_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
+StaticMeshActor="\"Object.Default.Item_position\" "
+etagere_Blueprint_C="\"Object.Default.Item_position\" "
+Void_Item_Blueprint_C=
+Non_Pickable_Item_Blueprint_C=
 Pickable_Item_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
+EnemyAI_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Actor.Tags\" "
+CapsuleComponent=
+ShapeComponent="\"Object.Collision.BodyInstance\" "
+SkeletalMeshComponent="\"Object.Collision.BodyInstance\" "
+SkinnedMeshComponent="\"Object.Collision.BodyInstance\" "
+SphereComponent="\"Object.Collision.BodyInstance\" "
+Generic_Item_C=
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1262,6 +1362,11 @@ InputSettings=True
 /Game/Shelf/Void_Item_Blueprint.Void_Item_Blueprint=1
 /Game/Shelf/Shelf_Blueprint.Shelf_Blueprint=1
 /Game/Shelf/Pickable_Item_Blueprint.Pickable_Item_Blueprint=1
+/Game/Shelf/etagere_Blueprint.etagere_Blueprint=1
+/Game/FirstPersonBP/Blueprints/PickableObject_2.PickableObject_2=1
+/Game/Shelf/etagere.etagere=1
+/Game/Shelf/PickableObject_2.PickableObject_2=1
+/Game/Shelf/Generic_Item.Generic_Item=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -1312,6 +1417,7 @@ NodeTemplateCacheCapMB=20.000000
 [PlacementMode]
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/PickableObject_2.PickableObject_2;
 RecentlyPlaced=/Game/Shelf/Pickable_Item_Blueprint.Pickable_Item_Blueprint;
+RecentlyPlaced=/Game/Shelf/etagere_Blueprint.etagere_Blueprint;
 RecentlyPlaced=/Game/Shelf/etagere.etagere;
 RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Shelf/Void_Item_Blueprint.Void_Item_Blueprint;
@@ -1392,9 +1498,10 @@ DisplayActorsCount=False
 [SuppressableDialogs]
 LevelAlreadyExistsInWorldWarning=False
 ChangeVariableType_Warning=False
+Warning_ReparentTitle=False
 
 [RootWindow]
-ScreenPosition=X=297.000 Y=843.000
+ScreenPosition=X=605.000 Y=636.000
 WindowSize=X=1281.000 Y=721.000
 InitiallyMaximized=True
 
@@ -1413,6 +1520,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [DetailCategoriesAdvanced]
 DestructibleMesh.Damage=True
+PickableObject_2_C.Collision=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2449,4 +2557,9 @@ MovieSceneCapture.TimeStamp=2021.11.22-09.47.59
 MovieSceneCapture.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2021.11.22-09.48.07
 TextureEditor.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2021.11.22-09.48.07
+StaticMeshEditor.LastCompileMethod=Unknown
+
+[SelectionDetails]
+PreserveScaleRatio=False
 
