Add Character Run

--- a/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -256,15 +256,15 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.Ax
 K2Node_CustomEvent=K2Node_CustomEvent.Inputs.InputArgument1,
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 FirstPersonCharacter_C=FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,
-FirstPersonCharacter_C=
+FirstPersonCharacter_C=StaticMeshActor.Collision.Collision,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,
 CapsuleComponent=
-CapsuleComponent=StaticMeshActor.Collision.Collision,
+CapsuleComponent=
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,
 Shelf_Blueprint_C=
 Shelf_Blueprint_C=
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
-K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,
 None=======
@@ -272,14 +272,15 @@ etagere_Blueprint_C=
 Void_Item_Blueprint_C=Void_Item_Blueprint_C.Physics.ConstraintsGroup,Void_Item_Blueprint_C.Rendering.RayTracing,Void_Item_Blueprint_C.Rendering.LOD,
 Non_Pickable_Item_Blueprint_C=Non_Pickable_Item_Blueprint_C.Physics.ConstraintsGroup,Non_Pickable_Item_Blueprint_C.Rendering.RayTracing,Non_Pickable_Item_Blueprint_C.Rendering.LOD,
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Rendering.TextureStreaming,
-SceneComponent=
+SceneComponent=StaticMeshActor.Collision.Collision,
 PickableObject_2_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 EnemyAI_C=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 BTT_ChangeMoveSpeed_C=
 Character=PropertyWrapper.DefaultValueCategory.None,
-CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.None,
+CharacterMovementComponent=
 BTT_GetNextPatrolPoint_C=
 BTT_ResetLostSight_C=
+Clock_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Rendering.TextureStreaming,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
@@ -368,16 +369,17 @@ LastLevel=/Game/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/FirstPersonExampleMap
-MRUItem1=/Game/FirstPersonBP/Blueprints/Clock
-MRUItem2=/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/3ColorBlend
-MRUItem3=/Game/Materials/Clock
-MRUItem4=/Game/FirstPersonBP/Blueprints/PickableObject_2
-MRUItem5=/Game/FirstPersonBP/Blueprints/TriggerBox_Blueprint
-MRUItem6=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem1=/Game/Maps/FirstPersonExampleMap
+MRUItem2=/Game/FirstPersonBP/Blueprints/Clock
+MRUItem3=/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/3ColorBlend
+MRUItem4=/Game/Materials/Clock
+MRUItem5=/Game/FirstPersonBP/Blueprints/PickableObject_2
+MRUItem6=/Game/FirstPersonBP/Blueprints/TriggerBox_Blueprint
 MRUItem7=/Game/Maps/Maxence_Scene
 MRUItem8=/Game/Shelf/Void_Item_Blueprint
 MRUItem9=/Game/Shelf/Non_Pickable_Item_Blueprint
@@ -1036,7 +1038,7 @@ AnimStateTransitionNode.BlendSettings=True
 AnimStateTransitionNode.Events=True
 AnimStateTransitionNode.Notifications=True
 AnimStateNode.Events=False
-FirstPersonCharacter_C.SkeletalMesh=False
+FirstPersonCharacter_C.SkeletalMesh=True
 FirstPersonCharacter_C.Optimization=True
 FirstPersonCharacter_C.MaterialParameters=True
 FirstPersonCharacter_C.HLOD=True
@@ -1468,6 +1470,8 @@ MaterialExpressionVectorParameter.CustomPrimitiveData=True
 MaterialExpressionVectorParameter.ParameterCustomization=True
 MaterialExpressionAdd.MaterialExpressionAdd=True
 MaterialExpressionAdd.MaterialExpression=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1478,7 +1482,7 @@ StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.Bo
 MeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent=
-PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent=
 None=======
 None=======
 None=======
@@ -1498,11 +1502,11 @@ K2Node=
 EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
 EdGraphNode=
 FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Actor.Tags\" "
-FirstPersonCharacter_C="\"Object.Seconds\" "
+FirstPersonCharacter_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Character="\"Object.Default.patrolPositions\" "
-Character="\"Object.Seconds\" "
+Character="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Pawn="\"Object.Default.patrolPositions\" "
-Pawn="\"Object.Seconds\" "
+Pawn="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Shelf_Blueprint_C="\"Object.Item\" "
 StaticMeshActor=
 etagere_Blueprint_C="\"Object.ItemPosition\" "
@@ -1515,7 +1519,7 @@ SkeletalMeshComponent="\"Object.Collision.BodyInstance\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" "
 CapsuleComponent=
 ShapeComponent=
-ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ShapeComponent=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" \"Object.Blackboard.Keys.Keys[1].KeyType\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
