--- a/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -257,7 +257,7 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.Ax
 K2Node_CustomEvent=K2Node_CustomEvent.Inputs.InputArgument1,
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 FirstPersonCharacter_C=FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,
-FirstPersonCharacter_C=StaticMeshActor.Collision.Collision,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,
+FirstPersonCharacter_C=
 CapsuleComponent=
 CapsuleComponent=
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
@@ -285,10 +285,12 @@ Clock_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Renderi
 GameOverScreen_C=
 MainMenu_C=
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
+PauseScreen_C=
+PlayerController=
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/UI
 None=======
 None=======
 PickableObject_2_C=PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,
@@ -374,28 +376,31 @@ LastLevel=/Game/Maps/MainMenuLevel
 [AssetEditorSubsystem]
 CleanShutdown=True
 CleanShutdown=True
+OpenAssetsAtExit=/Game/FirstPersonBP/UI/PauseScreen.PauseScreen
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/Clock.Clock
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Maps/MainMenuLevel
-MRUItem1=/Game/FirstPersonBP/Blueprints/Clock
+MRUItem1=/Engine/EditorBlueprintResources/StandardMacros
 MRUItem2=/Game/Maps/FirstPersonExampleMap
-MRUItem3=/Game/FirstPersonBP/UI/GameOver/MainMenu_PC
-MRUItem4=/Game/Maps/GameOverScene
-MRUItem5=/Game/FirstPersonBP/UI/MainMenu/MainMenuGameMode
-MRUItem6=/Game/FirstPersonBP/UI/MainMenu_PC
-MRUItem7=/Game/FirstPersonBP/UI/MainMenuGameMode
-MRUItem8=/Game/FirstPersonBP/UI/MainMenu
-MRUItem9=/Game/FirstPersonBP/GameOverScreen
-MRUItem10=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem11=/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/3ColorBlend
-MRUItem12=/Game/Materials/Clock
-MRUItem13=/Game/FirstPersonBP/Blueprints/PickableObject_2
-MRUItem14=/Game/FirstPersonBP/Blueprints/TriggerBox_Blueprint
-MRUItem15=/Game/Maps/Maxence_Scene
-MRUItem16=/Game/Shelf/Void_Item_Blueprint
-MRUItem17=/Game/Shelf/Non_Pickable_Item_Blueprint
-MRUItem18=/Game/Shelf/Pickable_Item_Blueprint
-MRUItem19=/Game/Shelf/05_-_Default
+MRUItem3=/Game/FirstPersonBP/Blueprints/Clock
+MRUItem4=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem5=/Game/FirstPersonBP/UI/PauseScreen
+MRUItem6=/Game/FirstPersonBP/UI/GameOver/MainMenu_PC
+MRUItem7=/Game/Maps/GameOverScene
+MRUItem8=/Game/FirstPersonBP/UI/MainMenu/MainMenuGameMode
+MRUItem9=/Game/FirstPersonBP/UI/MainMenu_PC
+MRUItem10=/Game/FirstPersonBP/UI/MainMenuGameMode
+MRUItem11=/Game/FirstPersonBP/UI/MainMenu
+MRUItem12=/Game/FirstPersonBP/GameOverScreen
+MRUItem13=/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/3ColorBlend
+MRUItem14=/Game/Materials/Clock
+MRUItem15=/Game/FirstPersonBP/Blueprints/PickableObject_2
+MRUItem16=/Game/FirstPersonBP/Blueprints/TriggerBox_Blueprint
+MRUItem17=/Game/Maps/Maxence_Scene
+MRUItem18=/Game/Shelf/Void_Item_Blueprint
+MRUItem19=/Game/Shelf/Non_Pickable_Item_Blueprint
 
 [DetailCategories]
 FirstPersonCharacter_C.Default=True
@@ -1565,6 +1570,35 @@ GameOverScene_C.Tick=True
 GameOverScene_C.Replication=True
 GameOverScene_C.Actor=True
 GameOverScene_C.Input=True
+ContentWidget.Layout=True
+ContentWidget.Behavior=True
+ContentWidget.Accessibility=True
+ContentWidget.Render Transform=True
+ContentWidget.Performance=True
+ContentWidget.Clipping=True
+ContentWidget.Navigation=True
+ContentWidget.Localization=True
+Widget.Behavior=True
+Widget.Accessibility=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+Widget.Localization=True
+PauseScreen_C.Appearance=True
+PauseScreen_C.Designer=True
+PauseScreen_C.Input=True
+PauseScreen_C.Interaction=True
+PauseScreen_C.Performance=True
+PauseScreen_C.Layout=True
+PauseScreen_C.Behavior=True
+PauseScreen_C.Render Transform=True
+PauseScreen_C.Accessibility=True
+PauseScreen_C.Clipping=True
+PauseScreen_C.Navigation=True
+PauseScreen_C.Localization=True
+K2Node_VariableSet.Events=True
+K2Node_InputAxisEvent.Input=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1581,7 +1615,7 @@ None=======
 None=======
 SceneComponent=
 ActorComponent=
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
+Object=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" \"Object.Blackboard.Keys.Keys[1].KeyType\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1595,14 +1629,14 @@ K2Node=
 EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
 EdGraphNode=
 FirstPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Actor.Tags\" "
-FirstPersonCharacter_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+FirstPersonCharacter_C=
 Character="\"Object.Default.patrolPositions\" "
-Character="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+Character=
 Pawn="\"Object.Default.patrolPositions\" "
-Pawn="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+Pawn=
 Shelf_Blueprint_C="\"Object.Item\" "
 StaticMeshActor=
-etagere_Blueprint_C="\"Object.ItemPosition\" "
+etagere_Blueprint_C=
 Void_Item_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 Non_Pickable_Item_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 Pickable_Item_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
@@ -1633,8 +1667,8 @@ BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.
 PreviewMaterial="\"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" "
 Material="\"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" "
 MaterialInterface="\"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" "
-TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Layout.Slot\" "
-TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Layout.Slot\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Layout.Slot\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Layout.Slot\" "
 Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
 Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
 Border="\"Object.Appearance.Background\" \"Object.Appearance.Background.ImageSize\" \"Object.Appearance.Background.Margin\" \"Object.Appearance.Background.TintColor\" \"Object.Layout.Slot\" "
@@ -1645,6 +1679,7 @@ UserWidget="\"Object.Layout.Slot\" "
 Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
 CanvasPanel="\"Object.Layout.Slot\" "
+PauseScreen_C="\"Object.Layout.Slot\" "
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1687,6 +1722,7 @@ None=======
 /Game/FirstPersonBP/UI/MainMenu/MainMenuGameMode.MainMenuGameMode=1
 /Game/FirstPersonBP/UI/GameOver/GameOverScreen.GameOverScreen=1
 /Game/Maps/GameOverScene.GameOverScene:PersistentLevel.GameOverScene=1
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
